force-app/main/default/objects/SccAddressLookup__c/SccAddressLookup__c.object-meta.xml
<CustomObject>
<description>开单地址自动识别和联网补查任务及审计。保留失败记录，不自动重试联网。</description>
<enableReports>true</enableReports><enableSearch>true</enableSearch>
<label>客户地址补全记录</label><nameField><displayFormat>ADDR-{000000}</displayFormat><label>地址补全记录编号</label><type>AutoNumber</type></nameField>
<pluralLabel>客户地址补全记录</pluralLabel><sharingModel>Private</sharingModel>
</CustomObject>