force-app/main/default/objects/SccAddressLookup__c/fields/Account__c.field-meta.xml
<CustomField><fullName>Account__c</fullName><label>客户</label><deleteConstraint>SetNull</deleteConstraint><referenceTo>Account</referenceTo><relationshipLabel>地址补全记录</relationshipLabel><relationshipName>AddressLookups</relationshipName><type>Lookup</type></CustomField>