force-app/main/default/objects/SccAddressLookup__c/fields/City__c.field-meta.xml
<CustomField><fullName>City__c</fullName><label>识别城市</label><length>80</length><type>Text</type></CustomField>