force-app/main/default/objects/SccAddressLookup__c/fields/Detail__c.field-meta.xml
<CustomField><fullName>Detail__c</fullName><label>处理说明</label><length>32768</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>