force-app/main/default/objects/SccAddressLookup__c/fields/Fingerprint__c.field-meta.xml
<CustomField><fullName>Fingerprint__c</fullName><label>输入指纹</label><length>64</length><type>Text</type></CustomField>