force-app/main/default/objects/SccAddressLookup__c/fields/Method__c.field-meta.xml
<CustomField><fullName>Method__c</fullName><label>识别来源</label><length>20</length><type>Text</type></CustomField>