force-app/main/default/objects/SccAddressLookup__c/fields/Province__c.field-meta.xml
<CustomField><fullName>Province__c</fullName><label>识别省份</label><length>80</length><type>Text</type></CustomField>