force-app/main/default/objects/SccAddressLookup__c/fields/Reason__c.field-meta.xml
<CustomField><fullName>Reason__c</fullName><description>程序写入的处理原因分类，用于列表筛选、排序和报表；完整说明见Detail__c。历史未分类记录保持空白。</description><label>处理原因</label><required>false</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>等待处理</fullName><default>false</default><label>等待处理</label></value><value><fullName>处理中</fullName><default>false</default><label>处理中</label></value><value><fullName>地址识别成功</fullName><default>false</default><label>地址识别成功</label></value><value><fullName>联网查询成功</fullName><default>false</default><label>联网查询成功</label></value><value><fullName>未找到可靠资料</fullName><default>false</default><label>未找到可靠资料</label></value><value><fullName>省市冲突或无法核验</fullName><default>false</default><label>省市冲突或无法核验</label></value><value><fullName>客户资料变化或条件不符</fullName><default>false</default><label>客户资料变化或条件不符</label></value><value><fullName>地区不适用</fullName><default>false</default><label>地区不适用</label></value><value><fullName>联网调用失败</fullName><default>false</default><label>联网调用失败</label></value><value><fullName>处理异常</fullName><default>false</default><label>处理异常</label></value><value><fullName>后台任务中断</fullName><default>false</default><label>后台任务中断</label></value></valueSetDefinition></valueSet></CustomField>