force-app/main/default/objects/SccAddressLookup__c/fields/RequestKey__c.field-meta.xml
<CustomField><fullName>RequestKey__c</fullName><label>请求去重键</label><caseSensitive>true</caseSensitive><externalId>true</externalId><length>100</length><type>Text</type><unique>true</unique></CustomField>