force-app/main/default/objects/SccAddressLookup__c/fields/Sources__c.field-meta.xml
<CustomField><fullName>Sources__c</fullName><label>联网来源</label><length>32768</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>