force-app/main/default/objects/SccAddressLookup__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>处理状态</label><length>20</length><type>Text</type></CustomField>