force-app/main/default/objects/SccAddressLookup__c/listViews/Address_Results.listView-meta.xml
<ListView><fullName>Address_Results</fullName><columns>NAME</columns><columns>Account__c</columns><columns>Status__c</columns><columns>Reason__c</columns><columns>Province__c</columns><columns>City__c</columns><columns>CREATED_DATE</columns><filterScope>Everything</filterScope><label>地址补全处理结果</label></ListView>